--- a/src/MAUI9/MAUIPlayground/Pages/Playground.xaml
+++ b/src/MAUI9/MAUIPlayground/Pages/Playground.xaml
@@ -11,47 +11,91 @@
             EventName="Appearing"                
             Command="{Binding AppearingCommand}" />
     </ContentPage.Behaviors>
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI Playground!"
+    <ScrollView>
+        <VerticalStackLayout>
+            <Label 
+            Margin="10"
+            Text="Welcome to .NET MAUI Playground! Use this space to try out controls or new features."
             VerticalOptions="Start" 
-            HorizontalOptions="Center" />
+            HorizontalOptions="Start" />
 
-        <CarouselView 
+            <Label Margin="10,15" Text="Carousel View" Style="{StaticResource Title2}" />
+
+            <CarouselView 
             ItemsSource="{Binding Items}"
             BackgroundColor="Gray"
             HeightRequest="200">
-            <CarouselView.ItemTemplate>
-                <DataTemplate x:DataType="pageModels:Item">
-                    <StackLayout>
-                        <Grid>
-                            <Image 
+                <CarouselView.ItemTemplate>
+                    <DataTemplate x:DataType="pageModels:Item">
+                        <StackLayout>
+                            <Grid>
+                                <Image 
                                 Source="{Binding Image}" 
                                 HeightRequest="200" 
                                 Aspect="AspectFill"                                
                                 HorizontalOptions="Center" 
                                 VerticalOptions="Center" />
-                            <StackLayout 
+                                <StackLayout 
                                 VerticalOptions="Center" 
                                 HorizontalOptions="Center" 
                                 BackgroundColor="Transparent">
-                                <Label 
+                                    <Label 
                                     Text="{Binding Title}" 
                                     FontSize="Large" 
                                     FontAttributes="Bold" 
                                     HorizontalOptions="Center" 
                                     TextColor="White" />
-                                <Label 
+                                    <Label 
                                     Text="{Binding Description}" 
                                     FontSize="Medium" 
                                     HorizontalOptions="Center" 
                                     TextColor="White" />
-                            </StackLayout>
-                        </Grid>
-                    </StackLayout>
-                </DataTemplate>
-            </CarouselView.ItemTemplate>
-        </CarouselView>
+                                </StackLayout>
+                            </Grid>
+                        </StackLayout>
+                    </DataTemplate>
+                </CarouselView.ItemTemplate>
+            </CarouselView>
 
-    </VerticalStackLayout>
+            <Label Margin="10,15" Style="{StaticResource Title2}" Text="Collection View - Horizontal" />
+
+            <CollectionView
+            ItemsSource="{Binding Items}"
+            ItemsLayout="Horizontal">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="pageModels:Item">
+                        <Border Margin="10">
+                            <VerticalStackLayout Padding="10">
+                                <Label Text="{Binding Title}" FontSize="24" />
+                                <Label Text="{Binding Description}" />
+                            </VerticalStackLayout>
+                            <Border.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding NavigateToProjectCommand, Source={RelativeSource AncestorType={x:Type pageModels:ProjectListPageModel}}, x:DataType=pageModels:ProjectListPageModel}" CommandParameter="{Binding .}"/>
+                            </Border.GestureRecognizers>
+                        </Border>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Label Margin="10,15" Style="{StaticResource Title2}" Text="Collection View - Vertical Grid" />
+
+            <CollectionView
+            ItemsSource="{Binding Items}"
+            ItemsLayout="VerticalGrid, 2">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="pageModels:Item">
+                        <Border Margin="10">
+                            <VerticalStackLayout Padding="10">
+                                <Label Text="{Binding Title}" FontSize="24" />
+                                <Label Text="{Binding Description}" />
+                            </VerticalStackLayout>
+                            <Border.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding NavigateToProjectCommand, Source={RelativeSource AncestorType={x:Type pageModels:ProjectListPageModel}}, x:DataType=pageModels:ProjectListPageModel}" CommandParameter="{Binding .}"/>
+                            </Border.GestureRecognizers>
+                        </Border>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
