--- a/src/MAUI9/MAUIPlayground/AppShell.xaml
+++ b/src/MAUI9/MAUIPlayground/AppShell.xaml
@@ -28,7 +28,7 @@
 
     <ShellContent
         Title="Playground"
-        Icon="{StaticResource IconDashboard}"
+        Icon="{StaticResource IconPlay}"
         ContentTemplate="{DataTemplate pages:Playground}"
         Route="playground" />
 
